Styling the images.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<header class="jumbotron text-center title"><h1>Crystal Collector</h1></header>
-		</div>	
+		</div>
 	</div>
 	<!-- Current Number to match Container-->
 	<div class="row">
@@ -32,16 +32,16 @@
 	</div>
 	<!-- Crystal image container-->
 	<div class="row">
-		<div class="col-md-2" id="ruby">
+		<div class="col-md-2 col-sm-6 col-xs-6" id="ruby">
 			<img src="assets/images/ruby.png">
 		</div>
-		<div class="col-md-2" id="emerald">
+		<div class="col-md-2 col-sm-6 col-xs-6" id="emerald">
 			<img src="assets/images/emerald.png">
 		</div>
-		<div class="col-md-2" id="diamond">
+		<div class="col-md-2 col-sm-6 col-xs-6" id="diamond">
 			<img src="assets/images/diamond.jpg">
 		</div>
-		<div class="col-md-2" id="saphire">
+		<div class="col-md-2 col-sm-6 col-xs-6" id="saphire">
 			<img src="assets/images/saphire.png">
 		</div>
 	</div>
@@ -51,7 +51,7 @@
 			<h3>Your total score is: <span id="totalScore"></span></h3>
 		</div>
 	</div>
-	
+
 	<!-- Instructions-->
 	<div class="row">
 		<div class="col-md-12 instructions">
